Include songs in game response
